--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.11",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "leaflet": "^1.6.0",
+    "leaflet-draw": "^1.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
